src/objects/Account_Link__c.object
<CustomObject>
    <fields>
        <fullName>Retail_Opt_In_Mobile__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Retail Opt In Mobile</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Retail_PersonBirthdate__c</fullName>
        <description>Read Only</description>
        <label>Retail PersonBirthdate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Retail_Phone_OptOut__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Retail Phone OptOut</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Retail_Position__c</fullName>
        <description>Readonly</description>
        <label>Retail Position</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Retail_Postal_OptOut__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Retail Postal OptOut</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Retail_Prefered_Radiostation__c</fullName>
        <label>Retail Prefered Radiostation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Retail_Preferred_Contact_Method__c</fullName>
        <description>Readonly</description>
        <label>Retail Preferred Contact Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Phone</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Fax</fullName>
                </value>
                <value>
                    <fullName>Direct Mail</fullName>
                </value>
                <value>
                    <fullName>SMS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Retail_Preferred_Language__c</fullName>
        <description>Readonly</description>
        <label>Retail Preferred Language</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Japanese</fullName>
                </value>
                <value>
                    <fullName>English</fullName>
                </value>
                <value>
                    <fullName>Chinese</fullName>
                </value>
                <value>
                    <fullName>Korean</fullName>
                </value>
                <value>
                    <fullName>Hindhi</fullName>
                </value>
                <value>
                    <fullName>German</fullName>
                </value>
                <value>
                    <fullName>French</fullName>
                </value>
                <value>
                    <fullName>Italian</fullName>
                </value>
                <value>
                    <fullName>Tagalogue</fullName>
                </value>
                <value>
                    <fullName>Portuguese</fullName>
                </value>
                <value>
                    <fullName>Vietnamese</fullName>
                </value>
                <value>
                    <fullName>Spanish</fullName>
                </value>
                <value>
                    <fullName>Thai</fullName>
                </value>
                <value>
                    <fullName>Russian</fullName>
                </value>
                <value>
                    <fullName>Turkey</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Retail_Primary_Phone__c</fullName>
        <description>Readonly</description>
        <label>Retail Primary Phone</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Home Phone</fullName>
                </value>
                <value>
                    <fullName>Mobile</fullName>
                </value>
                <value>
                    <fullName>Work Phone</fullName>
                </value>
                <value>
                    <fullName>Work Mobile</fullName>
                </value>
                <value>
                    <fullName>Other1</fullName>
                </value>
                <value>
                    <fullName>Other2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Retail_Province__c</fullName>
        <label>Retail Province</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Retail_Race__c</fullName>
        <label>Retail Race</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Thai</fullName>
                </value>
                <value>
                    <fullName>American</fullName>
                </value>
                <value>
                    <fullName>British</fullName>
                </value>
                <value>
                    <fullName>Chinese</fullName>
                </value>
                <value>
                    <fullName>French</fullName>
                </value>
                <value>
                    <fullName>German</fullName>
                </value>
                <value>
                    <fullName>Indian</fullName>
                </value>
                <value>
                    <fullName>Japanese</fullName>
                </value>
                <value>
                    <fullName>South Korean</fullName>
                </value>
                <value>
                    <fullName>Laotian</fullName>
                </value>
                <value>
                    <fullName>Malaysian</fullName>
                </value>
                <value>
                    <fullName>Singaporean</fullName>
                </value>
                <value>
                    <fullName>Taiwanese</fullName>
                </value>
                <value>
                    <fullName>Vietnamese</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
                <value>
                    <fullName>Malay</fullName>
                </value>
                <value>
                    <fullName>Bumi</fullName>
                </value>
                <value>
                    <fullName>Non-Bumi</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Retail_Related_Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Editable only by Dealer</description>
        <label>Retail Related Company</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account_Link__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Retail Company</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account_Link__c</referenceTo>
        <relationshipLabel>Account Link</relationshipLabel>
        <relationshipName>Account_Link</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Retail_Responsible__c</fullName>
        <label>Retail Responsible</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Retail_Sales_Consultant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Editable only by Dealer</description>
        <label>Retail Sales Consultant</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Account_Link2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Retail_Sales_Sanction_Comment__c</fullName>
        <description>Editable only by Dealer</description>
        <label>Retail Sales Sanction Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Retail_Sales_Sanction__c</fullName>
        <description>Editable only by Dealer</description>
        <label>Retail Sales Sanction</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>D</fullName>
                </value>
                <value>
                    <fullName>E</fullName>
                </value>
                <value>
                    <fullName>F</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Retail_Salutation__c</fullName>
        <label>Retail Salutation</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Retail_Special_Care__c</fullName>
        <description>Readonly</description>
        <label>Retail Special Care</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Retail_Special_Needs_Class__c</fullName>
        <description>Readonly</description>
        <label>Retail Special Needs Class</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>D</fullName>
                </value>
                <value>
                    <fullName>E</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Retail_UCID__c</fullName>
        <label>Retail UCID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Retail_Updated_Consent_Date__c</fullName>
        <label>Retail Updated Consent Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Retail_Updated_Consent_User__c</fullName>
        <label>Retail Updated Consent User</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Retail_Vat_No__c</fullName>
        <description>Readonly</description>
        <label>Retail Vat No</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Retail_Visit_OptOut__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Retail Visit OptOut</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Retail_WebSite__c</fullName>
        <description>Readonly</description>
        <label>Retail Web Site</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Retail_Work_Phone__c</fullName>
        <description>Readonly</description>
        <label>Retail Work Phone</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Retail_ZipCode__c</fullName>
        <description>Readonly</description>
        <label>Retail ZipCode</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Role2__c</fullName>
        <label>Role2</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Parent</fullName>
                </value>
                <value>
                    <fullName>Child</fullName>
                </value>
                <value>
                    <fullName>Husband・Wife</fullName>
                </value>
                <value>
                    <fullName>Partner</fullName>
                </value>
                <value>
                    <fullName>Grand parent</fullName>
                </value>
                <value>
                    <fullName>Grand child</fullName>
                </value>
                <value>
                    <fullName>Relative</fullName>
                </value>
                <value>
                    <fullName>Manager</fullName>
                </value>
                <value>
                    <fullName>Employee</fullName>
                </value>
                <value>
                    <fullName>Colleague</fullName>
                </value>
                <value>
                    <fullName>Company</fullName>
                </value>
                <value>
                    <fullName>Business partner</fullName>
                </value>
                <value>
                    <fullName>Friend</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>After-Sales</fullName>
                </value>
                <value>
                    <fullName>Husband&apos;s Wife</fullName>
                </value>
                <value>
                    <fullName>Spouse</fullName>
                </value>
                <value>
                    <fullName>Son</fullName>
                </value>
                <value>
                    <fullName>Daughter</fullName>
                </value>
                <value>
                    <fullName>Boyfriend</fullName>
                </value>
                <value>
                    <fullName>Girlfriend</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Role_Text__c</fullName>
        <label>Role Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Parent</fullName>
                </value>
                <value>
                    <fullName>Child</fullName>
                </value>
                <value>
                    <fullName>Husband・Wife</fullName>
                </value>
                <value>
                    <fullName>Partner</fullName>
                </value>
                <value>
                    <fullName>Grand parent</fullName>
                </value>
                <value>
                    <fullName>Grand child</fullName>
                </value>
                <value>
                    <fullName>Relative</fullName>
                </value>
                <value>
                    <fullName>Manager</fullName>
                </value>
                <value>
                    <fullName>Employee</fullName>
                </value>
                <value>
                    <fullName>Colleague</fullName>
                </value>
                <value>
                    <fullName>Company</fullName>
                </value>
                <value>
                    <fullName>Business partner</fullName>
                </value>
                <value>
                    <fullName>Friend</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>After-Sales</fullName>
                </value>
                <value>
                    <fullName>Spouse</fullName>
                </value>
                <value>
                    <fullName>Son</fullName>
                </value>
                <value>
                    <fullName>Daughter</fullName>
                </value>
                <value>
                    <fullName>Boyfriend</fullName>
                </value>
                <value>
                    <fullName>Girlfriend</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sales_Person_Id__c</fullName>
        <label>Sales Person Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Representative__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Representative</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Account_Link</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sector__c</fullName>
        <label>Sector</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Passenger Car</fullName>
                </value>
                <value>
                    <fullName>Vans</fullName>
                </value>
                <value>
                    <fullName>Trucks</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>Service &amp; Parts</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Selling_Dealer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Selling Dealer</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>(1 AND 2) OR 3</booleanFilter>
            <errorMessage>Please select the proper dealer account.</errorMessage>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Dealer</value>
            </filterItems>
            <filterItems>
                <field>Account.Dealer_Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>$Profile.Name</field>
                <operation>equals</operation>
                <value>IntegrationAPI</value>
            </filterItems>
            <infoMessage>Search and select accounts.</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Link (Selling Dealer)</relationshipLabel>
        <relationshipName>Account_Link</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Service_Advisor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Advisor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Account_Link1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Service_Dealer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Dealer</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>(1 AND 2) OR 3</booleanFilter>
            <errorMessage>Please select the proper dealer account.</errorMessage>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Dealer</value>
            </filterItems>
            <filterItems>
                <field>Account.Dealer_Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>$Profile.Name</field>
                <operation>equals</operation>
                <value>IntegrationAPI</value>
            </filterItems>
            <infoMessage>Search and select accounts.</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Link (Service Dealer)</relationshipLabel>
        <relationshipName>Account_Link3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SocialMediaAccount_ID__c</fullName>
        <label>SocialMediaAccount ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Dealer Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>My Shop</fullName>
                </value>
                <value>
                    <fullName>Last Selling</fullName>
                </value>
                <value>
                    <fullName>Last Servicing</fullName>
                </value>
                <value>
                    <fullName>Territory Dealer</fullName>
                </value>
                <value>
                    <fullName>Campaign/Project Dealer</fullName>
                </value>
                <value>
                    <fullName>My Shops</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SystemModstamp__c</fullName>
        <label>SystemModstamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>System__c</fullName>
        <label>Mercedes Me Portal</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>To_Be_Deleted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>To Be Deleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Updated_By_EP_Transactions__c</fullName>
        <label>Updated By EP Transactions</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VIN__c</fullName>
        <formula>Vehicle__r.UsVIN__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>VIN</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vehicle__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vehicle</label>
        <referenceTo>Vehicle__c</referenceTo>
        <relationshipLabel>Account Links</relationshipLabel>
        <relationshipName>Account_Links</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>fromRole__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account 1</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Links (Contact to Contact)</relationshipLabel>
        <relationshipName>Account_Links1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>toRole__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account 2</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Links(External Link)</relationshipLabel>
        <relationshipName>Account_Links</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Account Link</label>
    <listViews>
        <fullName>All_Account_Links</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All Account Links</label>
        <language>en_US</language>
        <sharedTo>
            <group>MBK01Ehq</group>
            <group>MBK09Shq</group>
            <group>MBK11Whq</group>
            <group>MBK17Whq</group>
            <group>MBK30Whq</group>
            <group>MBK31Shq</group>
            <group>MBK41Fhq</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CCC_Manager_KR_Account_Link</fullName>
        <filterScope>Queue</filterScope>
        <label>CCC Manager KR</label>
        <queue>CCC_Manager_KR</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>View2</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>fromRole__c</columns>
        <columns>Role__c</columns>
        <columns>toRole__c</columns>
        <columns>Role2__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>fromRole__c</field>
            <operation>equals</operation>
            <value>津山サービス工場</value>
        </filters>
        <filters>
            <field>UPDATEDBY_USER</field>
            <operation>contains</operation>
            <value>岡本</value>
        </filters>
        <label>津山サービス工場</label>
        <language>ja</language>
        <sharedTo>
            <roleAndSubordinatesInternal>MBJ_IT_Department</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>View3</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>fromRole__c</columns>
        <columns>Role__c</columns>
        <columns>toRole__c</columns>
        <columns>Role2__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>fromRole__c</field>
            <operation>equals</operation>
            <value>御殿場営業所</value>
        </filters>
        <filters>
            <field>UPDATEDBY_USER</field>
            <operation>contains</operation>
            <value>原</value>
        </filters>
        <label>御殿場営業所</label>
        <language>ja</language>
        <sharedTo>
            <roleAndSubordinatesInternal>MBJ_IT_Department</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Link</pluralLabel>
    <recordTypes>
        <fullName>CompanyExternalLink</fullName>
        <active>true</active>
        <description>To link self-registered customer records</description>
        <label>Company Customer External Link</label>
    </recordTypes>
    <recordTypes>
        <fullName>Contact2Contact</fullName>
        <active>true</active>
        <description>Company Account and Individual Account with Individual Account</description>
        <label>Contact2Contact</label>
    </recordTypes>
    <recordTypes>
        <fullName>ContactSector</fullName>
        <active>true</active>
        <description>To link customer records with dealer records.</description>
        <label>ContactSector</label>
    </recordTypes>
    <recordTypes>
        <fullName>IndividualExternalLink</fullName>
        <active>true</active>
        <description>To link self-registered customer records with which system in which the customer registration happened</description>
        <label>Individual Customer External Link</label>
    </recordTypes>
    <recordTypes>
        <fullName>Retail_Company</fullName>
        <active>true</active>
        <description>Customer Copy for Company Account</description>
        <label>Retail Company</label>
    </recordTypes>
    <recordTypes>
        <fullName>Retail_Person</fullName>
        <active>true</active>
        <description>Customer Copy for Person Account</description>
        <label>Retail Person</label>
    </recordTypes>
    <recordTypes>
        <fullName>Vehicle_External_Link</fullName>
        <active>true</active>
        <description>To capture the vehicle which were Imported</description>
        <label>Vehicle External Link</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <sharingReasons>
        <fullName>Contact_Sector_Share__c</fullName>
        <label>Contact Sector Share</label>
    </sharingReasons>
    <sharingReasons>
        <fullName>Contact_To_Contact_Share__c</fullName>
        <label>Contact To Contact Share</label>
    </sharingReasons>
    <sharingReasons>
        <fullName>External_Link_Share__c</fullName>
        <label>External Link Share</label>
    </sharingReasons>
    <validationRules>
        <fullName>AccountLink_Market_Cannot_be_Changed</fullName>
        <active>false</active>
        <description>Market field of AccountLink should be same as user&apos;s market field</description>
        <errorConditionFormula>AND(TEXT( Market__c ) != TEXT( $User.Market__c ) ,$Profile.Name != &apos;IntegrationAPI&apos;)</errorConditionFormula>
        <errorDisplayField>Market__c</errorDisplayField>
        <errorMessage>You are allowed to create record for your home market only</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Account_1_Account_2_cannot_be_same</fullName>
        <active>true</active>
        <description>Cannot link same accounts</description>
        <errorConditionFormula>(fromRole__c = toRole__c) &amp;&amp;
$Profile.Name != &apos;IntegrationAPI&apos; &amp;&amp;
RecordType.DeveloperName = &apos;Contact2Contact&apos;</errorConditionFormula>
        <errorMessage>Cannot Link to the same person</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Dealer_User_Cant_Change_toRole_Fromrole</fullName>
        <active>true</active>
        <description>Dealer users cant change the from role and torole</description>
        <errorConditionFormula>AND(!ISNEW(),OR($Profile.Name =&apos;Japan Dealer Company Manager&apos;,$Profile.Name =&apos;Japan Dealer Sales Manager&apos;,$Profile.Name =&apos;Japan Dealer Sales Representative&apos;,$Profile.Name =&apos;Japan Dealer Service Advisor&apos;,$Profile.Name =&apos;Japan Dealer Service Manager&apos; ),MD__c=&apos;JP&apos;,OR(RecordType.DeveloperName=&apos;Retail_Person&apos;,RecordType.DeveloperName=&apos;Retail_Company&apos;),OR(ISCHANGED(fromRole__c),ISCHANGED(toRole__c)))</errorConditionFormula>
        <errorMessage>Dealer User Cant Change the from Role and To role</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Retail_Company_Name_Native_Kana</fullName>
        <active>false</active>
        <errorConditionFormula>AND(NOT(
OR(
ISBLANK(Retail_Company_Name_Native1__c),
REGEX(Retail_Company_Name_Native1__c, &quot;[ァアィイゥウェエォオカガキギクグケゲコゴサザシジスズセゼソゾタダチヂッツヅテデトドナニヌネノハバパヒビピフブプヘベペホボポマミムメモャヤュユョヨラリルレロヮワヰヱヲンヴヵヶ－ー]*&quot;))),$Profile.Name != &apos;IntegrationAPI&apos;, 
MD__c = &apos;JP&apos;)</errorConditionFormula>
        <errorDisplayField>Retail_Company_Name_Native1__c</errorDisplayField>
        <errorMessage>It should be &quot;Kana&quot; characters.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Retail_First_Name_Native_Kana</fullName>
        <active>true</active>
        <errorConditionFormula>AND(NOT(
OR(
ISBLANK(Retail_FirstName_Native__c),
REGEX(Retail_FirstName_Native__c, &quot;[ァアィイゥウェエォオカガキギクグケゲコゴサザシジスズセゼソゾタダチヂッツヅテデトドナニヌネノハバパヒビピフブプヘベペホボポマミムメモャヤュユョヨラリルレロヮワヰヱヲンヴヵヶ－ー]*&quot;))),$Profile.Name != &apos;IntegrationAPI&apos;, 
MD__c = &apos;JP&apos;)</errorConditionFormula>
        <errorDisplayField>Retail_FirstName_Native__c</errorDisplayField>
        <errorMessage>IT Should be KANA Characters</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Retail_Full_Name_Native_Kana</fullName>
        <active>true</active>
        <errorConditionFormula>AND(NOT(
OR(
ISBLANK(Retail_Full_Name_Native__c),OR(CONTAINS(Retail_Full_Name_Native__c, &apos; &apos;) ,
REGEX(Retail_Full_Name_Native__c, &quot;[ァアィイゥウェエォオカガキギクグケゲコゴサザシジスズセゼソゾタダチヂッツヅテデトドナニヌネノハバパヒビピフブプヘベペホボポマミムメモャヤュユョヨラリルレロヮワヰヱヲンヴヵヶ－ー]*&quot;)))),$Profile.Name != &apos;IntegrationAPI&apos;, 
MD__c = &apos;JP&apos;)</errorConditionFormula>
        <errorDisplayField>Retail_Full_Name_Native__c</errorDisplayField>
        <errorMessage>It should be &quot;Kana&quot; characters.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Retail_Last_Name_Native_Kana</fullName>
        <active>true</active>
        <errorConditionFormula>AND(NOT(
OR(
ISBLANK(Retail_LastName_Native__c),
REGEX(Retail_LastName_Native__c, &quot;[ァアィイゥウェエォオカガキギクグケゲコゴサザシジスズセゼソゾタダチヂッツヅテデトドナニヌネノハバパヒビピフブプヘベペホボポマミムメモャヤュユョヨラリルレロヮワヰヱヲンヴヵヶ－ー]*&quot;))),$Profile.Name != &apos;IntegrationAPI&apos;, 
MD__c = &apos;JP&apos;)</errorConditionFormula>
        <errorDisplayField>Retail_LastName_Native__c</errorDisplayField>
        <errorMessage>It should be &quot;Kana&quot; characters.</errorMessage>
    </validationRules>
</CustomObject>